# careerops

./: .dockerignore  .editorconfig  .env.example  .gitignore  Dockerfile  README.md  biome.json  compose.yaml  manage.py  package.json  pyproject.toml
.github/: dependabot.yml
.github/workflows/: _container-quality.yml  _frontend-quality.yml  _python-quality.yml  _repository-policy.yml  _security-scan.yml  codeql.yml  dependency-review.yml  quality.yml  security.yml
apps/: __init__.py
apps/accounts/: __init__.py  admin.py  forms.py  managers.py  models.py  services.py  test_auth_views.py  test_login_throttle.py  test_models.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py  0002_alter_user_options_alter_user_groups.py  0002_login_throttle_state.py
apps/platform/: __init__.py  apps.py  test_assets.py  test_health.py  test_shell.py  urls.py  views.py
apps/platform/templatetags/: vite.py
config/: __init__.py  logging.py  urls.py
config/settings/: base.py  local.py  production.py  tests.py
docker/development/: start.sh
docs/: README.md
docs/architecture/: ARCHITECTURE.md  DIAGRAMS.md
docs/architecture/adr/: README.md
docs/architecture/diagrams/: application-state.mmd  bounded-context-map.mmd  capture-sequence.mmd  careerops.dbml  future-rag-boundary.mmd  observation-state.mmd  resolution-state.mmd  resolution-transaction.mmd  system-context.mmd
docs/architecture/erd/: careerops.dbml
docs/domain/: BOUNDED_CONTEXTS.md  DOMAIN_GLOSSARY.md  INTEGRATIONS.md
docs/engineering/: ENGINEERING_STANDARDS.md
docs/planning/: ROADMAP.md  TECHNOLOGY_DECISIONS.md
docs/product/: PRODUCT_VISION.md
docs/security/: SECURITY_MODEL.md
frontend/web-assets/: tsconfig.json  vite.config.ts
frontend/web-assets/src/: main.ts  styles.css
frontend/web-assets/src/styles/: app.css
frontend/web-assets/src/styles/components/: button.css  message.css  status-panel.css
frontend/web-assets/src/styles/foundations/: accessibility.css  base.css  theme.css
frontend/web-assets/src/styles/layouts/: application-shell.css
frontend/web-assets/src/styles/pages/: authentication.css  shell.css
frontend/web-assets/src/ts/: htmx.ts
scripts/: bootstrap-github-roadmap.ps1
templates/: base.html
templates/accounts/: login.html
templates/platform/: asset_smoke.html  shell.html
tests/: __init__.py
tests/architecture/: __init__.py  test_repository_policy.py
